@@ -2,6 +2,13 @@ from django.db import models
 
 from mptt.models import treeify
 
+class Category(models.Model):
+    name = models.CharField(max_length=50)
+    parent = models.ForeignKey('self', null=True, blank=True, related_name='children')
+
+    def __unicode__(self):
+        return self.name
+
 class Genre(models.Model):
     name = models.CharField(max_length=50, unique=True)
     parent = models.ForeignKey('self', null=True, blank=True, related_name='children')
@@ -9,4 +16,5 @@ class Genre(models.Model):
     def __unicode__(self):
         return self.name
 
+treeify(Category)
 treeify(Genre)
